--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
       "Yep- I did call you meri. I wanted to call you mine the very day when you rested on my shoulder.",
       "I promise to be there for you, during the times you need me- I want to be your support. your greatest cheerleader, your greatest friend, your greatest partner.",
       "Even when you don't need me, I'll still be there annoying you with my borderline umm.. racist jokes?",
-      "I really love spending time with you. I admire every single thing about you- from your sweet scent to your soft skin, the way you walk, the way you put your hair behind your ears, the way you look at me.",
+      "I really love spending time with you. I admire every single thing about you- your heart warming chuckles, your adorable telugu, your sweetest smile, the way you put your hair behind your ears, the list just goes on and on.",
       "I wanna call you my girlfriend and I so badly want to be your boyfriend. I know there are lot of things that we don't have answers to, but then, we'll figure it out together.",
     ].join("\n\n");
 
