--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Romantic Night-time Beach Scene</title>
+  <title>Gunnu</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Merriweather:wght@400;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   <style>
     /* Remove default margins and ensure canvas fills the viewport */
@@ -451,7 +451,7 @@
       "I promise to be there for you, during the times you need me- I want to be your support. your greatest cheerleader, your greatest friend, your greatest partner.",
       "Even when you don't need me, I'll still be there annoying you with my borderline umm.. racist jokes?",
       "I really love spending time with you. I admire every single thing about you- your heart warming chuckles, your adorable telugu, your sweetest smile, the way you put your hair behind your ears, the list just goes on and on.",
-      "I wanna call you my girlfriend and I so badly want to be your boyfriend. I know there are lot of things that we don't have answers to, but then, we'll figure it out together.",
+      "",
     ].join("\n\n");
 
     const TYPE_SPEED = 35; // ms per character
