--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@
                 <div class="intro-container">
                     <p class="intro-line">I made this little corner of the internet</p>
                     <p class="intro-line">just for <span class="sparkle-text">you</span> ✨</p>
-                    <p class="intro-line">Because you deserve to feel <span class="highlight secret" onclick="foundSecret(1, '💎', 'Hidden Gem!', 'Just like you - rare and precious!')">special</span> 💕</p>
+                    <p class="intro-line">You deserve to be reminded of how <span class="highlight secret" onclick="foundSecret(1, '💎', 'Hidden Gem!', 'Just like you - rare and precious!')">special</span> you are 💕</p>
                 </div>
 
                 <div style="margin: 30px 0;">
@@ -1052,14 +1052,16 @@
                 </div>
 
                 <div class="mood-section">
-                    <p class="mood-question">So tell me... how's your heart today? 💭</p>
+                    <p class="mood-question">So tell me sweetu... how are you doing today? 💭</p>
                     
                     <div class="mood-grid">
                         <button class="mood-btn" data-label="Rough day" onclick="selectMood('sad')">🥺</button>
+                        <!-- Hidden mood buttons - uncomment to enable
                         <button class="mood-btn" data-label="Meh" onclick="selectMood('meh')">😔</button>
                         <button class="mood-btn" data-label="Okay" onclick="selectMood('okay')">🙂</button>
                         <button class="mood-btn" data-label="Good!" onclick="selectMood('good')">😊</button>
                         <button class="mood-btn" data-label="Amazing!" onclick="selectMood('great')">🥰</button>
+                        -->
                     </div>
                 </div>
 
@@ -1081,7 +1083,7 @@
                 </div>
 
                 <div class="bubble" onclick="foundSecret(8, '💝', 'Bubble Tapper!', 'Every bubble holds a piece of my heart for you!')">
-                    <p>I know today feels heavy. I know everything seems like too much right now. But listen to me... 💕</p>
+                    <p>I know today was a really tough day. I know everything seems like too much right now. But gunnu listen to me na... 💕</p>
                 </div>
 
                 <div class="bubble">
@@ -1089,31 +1091,29 @@
                 </div>
 
                 <div class="bubble">
-                    <p>You travel <strong>3 hours every single day</strong> because you care THAT much. That's not weakness — that's <span class="highlight secret" onclick="foundSecret(9, '🦸‍♀️', 'Hero Energy!', 'You have the heart of a warrior!')">warrior energy</span>. 💪</p>
+                    <p>You travel <strong>3 hours every single day</strong> because you care THAT much. You are making your own freaking way and show up every single day. I have nothing but pure <span class="highlight secret" onclick="foundSecret(9, '🦸‍♀️', 'Hero Energy!', 'You have the heart of a warrior!')">admiration</span> 💪</p>
                 </div>
 
                 <div class="bubble">
-                    <p>You practice before class even starts. You take extra courses. You go above and beyond. That's not "just okay" — that's <span class="rainbow-text">extraordinary</span>. ✨</p>
+                    <p>You practice before class even starts. You take extra courses. You go above and beyond. That's not "average"- that's <span class="rainbow-text">extraordinary</span>. ✨</p>
                 </div>
 
                 <div class="media-section">
                     <p class="media-title">🎙️ I recorded this just for you...</p>
-                    <!-- REPLACE: voice note path -->
                     <audio controls>
-                        <source src="voice-notes/comfort.mp3" type="audio/mpeg">
+                        <source src="https://pyaarigunnu.github.io/voice-notes/comfort.ogg" type="audio/ogg">
                     </audio>
                 </div>
 
                 <div class="media-section">
                     <p class="media-title">📹 Watch this when you're ready</p>
                     <div class="video-wrapper">
-                        <!-- REPLACE: YouTube video ID -->
-                        <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/r81zNIkRq-M" allowfullscreen></iframe>
                     </div>
                 </div>
 
                 <div class="quote-box" onclick="cycleQuote('sad')">
-                    <p class="quote-text" id="sadQuote">You've survived 100% of your worst days. That's an incredible track record. 💕</p>
+                    <p class="quote-text" id="sadQuote">Your seniors and batchmates gaye tel lene. You are the bestest of all 💕</p>
                 </div>
 
                 <div class="btn-group">
@@ -1122,7 +1122,7 @@
                 </div>
 
                 <div class="btn-group">
-                    <button class="btn-secondary btn" onclick="goToPage('pageGallery')">Why you're amazing →</button>
+                    <button class="btn-secondary btn" onclick="goToPage('pageFinal')">One last thing →</button>
                     <button class="btn-secondary btn" onclick="goToPage('page1')">← Back</button>
                 </div>
             </div>
@@ -1361,7 +1361,7 @@
                 </div>
 
                 <div class="bubble" style="margin-top: 25px; text-align: center;">
-                    <p>Those seniors who don't appreciate you? They probably see how amazing you are and it intimidates them. <strong>Your light doesn't dim because someone else can't see it.</strong> 💕</p>
+                    <p>Everyone who who don't appreciate you? They probably see how amazing you are and it intimidates them. <strong>Your light doesn't dim because someone else can't see it.</strong> 💕</p>
                 </div>
 
                 <div class="btn-group">
@@ -1386,15 +1386,15 @@
 
                 <div style="margin: 25px 0; line-height: 2.2; text-align: center;" class="text">
                     <p>Promise me that on the hard days, you'll come back here. 💕</p>
-                    <p style="margin-top: 15px;">Promise me you'll remember that someone cares about you <strong>so much</strong> that they made you an entire website. 🌐</p>
-                    <p style="margin-top: 15px;">Promise me you'll NEVER call yourself incompetent again. Because you? You're a <span class="rainbow-text" style="font-weight: 800; font-size: 1.2rem;">SUPERSTAR</span>. ⭐</p>
-                    <p style="margin-top: 15px;">And promise me you'll reach out when things get heavy. You're never a burden. You're a <strong>gift</strong>. 🎁</p>
+                    <p style="margin-top: 15px;">Promise me you'll remember that someone cares about you <strong>so much</strong> that would do anything to make you feel better.</p>
+                    <p style="margin-top: 15px;">Promise me you'll NEVER call yourself incompetent again. Because you? You're a <span class="rainbow-text" style="font-weight: 800; font-size: 1.2rem;">SUPERSTAR</span> and a <span class="rainbow-text" style="font-weight: 800; font-size: 1.2rem;">SWEETHEART</span> ⭐</p>
+                    <p style="margin-top: 15px;">And promise me you'll reach out when things get heavy. You're never a burden. You're among the best <strong>gifts 🎁</strong> life has given me</p>
                 </div>
 
                 <div class="media-section">
                     <p class="media-title">🎙️ One final message...</p>
                     <audio controls>
-                        <source src="voice-notes/final.mp3" type="audio/mpeg">
+                        <source src="https://pyaarigunnu.github.io/voice-notes/final.ogg" type="audio/ogg">
                     </audio>
                 </div>
 
@@ -1402,10 +1402,10 @@
                     <button class="btn" onclick="megaConfetti(); sendHug()">💝 I promise! 💝</button>
                 </div>
 
-                <p class="hint" style="margin-top: 30px;">
+                <!-- <p class="hint" style="margin-top: 30px;">
                     The 🤗 button is always here for you.<br>
                     You're loved. Always. Forever. 💕
-                </p>
+                </p> -->
 
                 <div class="btn-group">
                     <button class="btn-secondary btn" onclick="goToPage('page1')">← Visit again</button>
@@ -1419,13 +1419,13 @@
         // ==================== CONFIGURATION ====================
         const quotes = {
             sad: [
-                "You've survived 100% of your worst days. That's an incredible track record. 💕",
-                "Your worth isn't measured by someone else's inability to see it. ✨",
-                "Tough times don't last. Tough people like YOU do. 💪",
-                "The storm will pass. And you'll dance in the sunshine again. 🌈",
-                "Being overwhelmed doesn't mean you're weak. It means you've been strong for too long. 💕",
-                "You're not falling behind. You're on your own beautiful path. 🌟",
-                "Hey, it's okay to have a bad day. Tomorrow is waiting with open arms. 🌅"
+                "You are a gift I got without asking for and would want to cherish in the deepest parts of my heart",
+                "Your seniors and batchmates gaye tel lene. You are the bestest of all 💕",
+                "Your worth isn't measured by someone else's inability to see it ✨",
+                "Gunnu sun na, you inspire me so so much ki I want to open a temple for you !!",
+                "Every single thing that pushes you to the limit, only makes you stronger",
+                "Being overwhelmed doesn't mean you're weak. It means you've been strong for too long 💕",
+                "Your strength is something I could only wish to have.",
             ],
             meh: [
                 "Even on your 'meh' days, you're still someone's reason to smile. 💕",
