--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@
 
                 <p class="hint">
                     <span class="hint-icon">💡</span> 
-                    Psst... tap the 
+                    tap the 
                     <span class="secret tap-hint" onclick="foundSecret(7, '🎁', 'Curious One!', 'Your curiosity is adorable!')">colorful words</span>
                     for surprises!
                 </p>
