--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@
                 <div class="media-section">
                     <p class="media-title">🎙️ I recorded this just for you...</p>
                     <audio controls>
-                        <source src="https://pyaarigunnu.github.io/voice-notes/comfort.ogg" type="audio/ogg">
+                        <source src="https://github.com/pyaarigunnu/pyaarigunnu.github.io/raw/main/comfort.ogg" type="audio/ogg">
                     </audio>
                 </div>
 
@@ -1394,7 +1394,7 @@
                 <div class="media-section">
                     <p class="media-title">🎙️ One final message...</p>
                     <audio controls>
-                        <source src="https://pyaarigunnu.github.io/voice-notes/final.ogg" type="audio/ogg">
+                        <source src="https://github.com/pyaarigunnu/pyaarigunnu.github.io/raw/main/final.ogg" type="audio/ogg">
                     </audio>
                 </div>
 
